Fix Render deployment - remove Composer dependency
- Simplified build command to remove Composer requirement
- Updated Procfile to handle directory setup
- PHP app doesn't need Composer since it's a simple standalone file
- This should fix the 'composer: command not found' error

--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,7 @@ services:
     runtime: php
     plan: free
     buildCommand: |
-      # Install dependencies and setup
-      composer install --no-dev --optimize-autoloader
+      # Setup directories and permissions
       chmod -R 755 server/
       mkdir -p server/uploads
       mkdir -p server/dbo/data
