Fix PHP command path for Render deployment
- Updated startCommand to use /usr/bin/php full path
- Updated Procfile to use full PHP path
- This should fix 'php: command not found' error on Render
- Render PHP runtime should now find PHP executable

--- a/render.yaml
+++ b/render.yaml
@@ -10,8 +10,8 @@ services:
       mkdir -p server/uploads
       mkdir -p server/dbo/data
     startCommand: |
-      # Start PHP built-in server
-      php -S 0.0.0.0:$PORT server/route.php
+      # Start PHP built-in server with full path
+      /usr/bin/php -S 0.0.0.0:$PORT server/route.php
     envVars:
       - key: PORT
         value: 8000
